@@ -4,8 +4,8 @@ apply plugin: 'war'
 group = 'com.epam.lab.java.web'
 version = '1.0-SNAPSHOT'
 
-sourceCompatibility = //1.8
-        targetCompatibility = 1.8
+sourceCompatibility =
+        targetCompatibility = 10
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -25,6 +25,8 @@ configurations {
 
 // turn sout`ing on in tests:
 test.testLogging.showStandardStreams = true
+
+//-parameters --add-modules=java.xml.ws
 
 // regexp: group: '([\w\.\d\-]*)', name: '([\w\.\d\-]*)', version: '([\d\.\+\-\w]+)'
 // replace: '$1:$2:$3'
@@ -63,12 +65,8 @@ dependencies {
             'org.apache.tomcat:tomcat-jsp-api:+',
 
             'org.apache.logging.log4j:log4j-slf4j-impl:+',
-            'io.vavr:vavr:+',
-            'org.glassfish.jersey.containers:jersey-container-servlet:2.26-b03',
-            'org.glassfish.jersey.media:jersey-media-moxy:2.26-b03',
-            'com.fasterxml.jackson.core:jackson-databind:+',
-            'org.apache.tomcat:tomcat-websocket-api:+',
-            'javax.xml.bind:jaxb-api:+'
+            'javax.xml.bind:jaxb-api:+',
+            'io.vavr:vavr:+'
 
     testCompile 'org.junit.jupiter:junit-jupiter-params:+',
             'org.hamcrest:java-hamcrest:+',
@@ -86,9 +84,9 @@ dependencies {
             'org.apache.tomcat:tomcat-jsp-api:+'
 }
 
-// type in terminal: gradle wrapper --gradle-version=4.8
+// type in terminal: gradle wrapper --gradle-version=4.8.1
 task wrapper(type: Wrapper) {
     description = 'Generates gradlew[.bat] scripts'
-    gradleVersion = '4.8'
+    gradleVersion = '4.8.1'
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
 }
